<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="ST_Aligned" Id="{8e2f2991-c14e-4444-a8f6-c0b09c9fd99f}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '2'}
TYPE ST_Aligned :						// 14 bytes
STRUCT
	bSwitch		: BOOL		:= FALSE;	// 1 byte
	sText		: STRING[4]	:= 'abcd';	// 5 bytes
	nReal		: REAL		:= 5.845;	// 4 bytes
	nInt		: INT		:= 234;		// 2 bytes
	nByte		: BYTE		:= 76;		// 1 byte
	//nPadding	: BYTE		:= 0;		// 1 byte
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>